crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_nested_same_line_marker_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..20
  LIST@0..8
    LIST_ITEM@0..8
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      LIST@2..8
        LIST_ITEM@2..8
          LIST_MARKER@2..3 "-"
          WHITESPACE@3..4 " "
          PLAIN@4..8
            TEXT@4..7 "foo"
            NEWLINE@7..8 "\n"
  LIST@8..20
    LIST_ITEM@8..20
      LIST_MARKER@8..10 "1."
      WHITESPACE@10..11 " "
      LIST@11..20
        LIST_ITEM@11..20
          LIST_MARKER@11..12 "-"
          WHITESPACE@12..13 " "
          LIST@13..20
            LIST_ITEM@13..20
              LIST_MARKER@13..15 "2."
              WHITESPACE@15..16 " "
              PLAIN@16..20
                TEXT@16..19 "foo"
                NEWLINE@19..20 "\n"
