crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_lists_bullet.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..1147
  PARAGRAPH@0..22
    TEXT@0..21 "A simple bullet list:"
    NEWLINE@21..22 "\n"
  BLANK_LINE@22..23
    BLANK_LINE@22..23 "\n"
  LIST@23..127
    LIST_ITEM@23..36
      LIST_MARKER@23..24 "*"
      WHITESPACE@24..25 " "
      PLAIN@25..36
        TEXT@25..35 "First item"
        NEWLINE@35..36 "\n"
    LIST_ITEM@36..114
      LIST_MARKER@36..37 "*"
      WHITESPACE@37..38 " "
      PLAIN@38..114
        TEXT@38..113 "Second item with a lo ..."
        NEWLINE@113..114 "\n"
    LIST_ITEM@114..127
      LIST_MARKER@114..115 "*"
      WHITESPACE@115..116 " "
      PLAIN@116..127
        TEXT@116..126 "Third item"
        NEWLINE@126..127 "\n"
  BLANK_LINE@127..128
    BLANK_LINE@127..128 "\n"
  PARAGRAPH@128..164
    TEXT@128..163 "Another list with dif ..."
    NEWLINE@163..164 "\n"
  BLANK_LINE@164..165
    BLANK_LINE@164..165 "\n"
  LIST@165..693
    LIST_ITEM@165..176
      LIST_MARKER@165..166 "-"
      WHITESPACE@166..167 " "
      PLAIN@167..176
        TEXT@167..175 "Item one"
        NEWLINE@175..176 "\n"
    LIST_ITEM@176..187
      LIST_MARKER@176..177 "-"
      WHITESPACE@177..178 " "
      PLAIN@178..187
        TEXT@178..186 "Item two"
        NEWLINE@186..187 "\n"
    BLANK_LINE@187..188
      BLANK_LINE@187..188 "\n"
    LIST_ITEM@188..323
      LIST_MARKER@188..189 "-"
      WHITESPACE@189..192 "   "
      PLAIN@192..323
        TEXT@192..263 "A function has a name ..."
        NEWLINE@263..264 "\n"
        TEXT@264..322 "and when called it ev ..."
        NEWLINE@322..323 "\n"
    LIST_ITEM@323..454
      LIST_MARKER@323..324 "-"
      WHITESPACE@324..327 "   "
      PLAIN@327..454
        TEXT@327..400 "The function returns  ..."
        NEWLINE@400..401 "\n"
        TEXT@401..453 "when the body contain ..."
        NEWLINE@453..454 "\n"
    LIST_ITEM@454..615
      LIST_MARKER@454..455 "-"
      WHITESPACE@455..458 "   "
      PLAIN@458..615
        TEXT@458..524 "Formal arguments can  ..."
        NEWLINE@524..525 "\n"
        TEXT@525..602 "implemented, and argu ..."
        NEWLINE@602..603 "\n"
        TEXT@603..614 "as by name."
        NEWLINE@614..615 "\n"
    LIST_ITEM@615..693
      LIST_MARKER@615..616 "-"
      WHITESPACE@616..619 "   "
      PLAIN@619..693
        TEXT@619..692 "Functions should do a ..."
        NEWLINE@692..693 "\n"
  BLANK_LINE@693..694
    BLANK_LINE@693..694 "\n"
  PARAGRAPH@694..759
    TEXT@694..746 "A list needs a blankl ..."
    NEWLINE@746..747 "\n"
    TEXT@747..752 "- One"
    NEWLINE@752..753 "\n"
    TEXT@753..758 "- Two"
    NEWLINE@758..759 "\n"
  BLANK_LINE@759..760
    BLANK_LINE@759..760 "\n"
  PARAGRAPH@760..778
    TEXT@760..777 "This is one list:"
    NEWLINE@777..778 "\n"
  BLANK_LINE@778..779
    BLANK_LINE@778..779 "\n"
  LIST@779..812
    LIST_ITEM@779..787
      LIST_MARKER@779..781 "1."
      WHITESPACE@781..783 "  "
      PLAIN@783..787
        TEXT@783..786 "one"
        NEWLINE@786..787 "\n"
    LIST_ITEM@787..795
      LIST_MARKER@787..789 "2."
      WHITESPACE@789..791 "  "
      PLAIN@791..795
        TEXT@791..794 "two"
        NEWLINE@794..795 "\n"
    BLANK_LINE@795..796
      BLANK_LINE@795..796 "\n"
    LIST_ITEM@796..804
      LIST_MARKER@796..798 "1."
      WHITESPACE@798..800 "  "
      PLAIN@800..804
        TEXT@800..803 "uno"
        NEWLINE@803..804 "\n"
    LIST_ITEM@804..812
      LIST_MARKER@804..806 "2."
      WHITESPACE@806..808 "  "
      PLAIN@808..812
        TEXT@808..811 "dos"
        NEWLINE@811..812 "\n"
  BLANK_LINE@812..813
    BLANK_LINE@812..813 "\n"
  PARAGRAPH@813..894
    TEXT@813..855 "If you need to have t ..."
    NEWLINE@855..856 "\n"
    TEXT@856..893 "you can separate them ..."
    NEWLINE@893..894 "\n"
  BLANK_LINE@894..895
    BLANK_LINE@894..895 "\n"
  LIST@895..911
    LIST_ITEM@895..903
      LIST_MARKER@895..897 "1."
      WHITESPACE@897..899 "  "
      PLAIN@899..903
        TEXT@899..902 "one"
        NEWLINE@902..903 "\n"
    LIST_ITEM@903..911
      LIST_MARKER@903..905 "2."
      WHITESPACE@905..907 "  "
      PLAIN@907..911
        TEXT@907..910 "two"
        NEWLINE@910..911 "\n"
  BLANK_LINE@911..912
    BLANK_LINE@911..912 "\n"
  HTML_BLOCK_RAW@912..921
    HTML_BLOCK_TAG@912..921
      TEXT@912..920 "<!-- -->"
      NEWLINE@920..921 "\n"
  BLANK_LINE@921..922
    BLANK_LINE@921..922 "\n"
  LIST@922..938
    LIST_ITEM@922..930
      LIST_MARKER@922..924 "1."
      WHITESPACE@924..926 "  "
      PLAIN@926..930
        TEXT@926..929 "uno"
        NEWLINE@929..930 "\n"
    LIST_ITEM@930..938
      LIST_MARKER@930..932 "2."
      WHITESPACE@932..934 "  "
      PLAIN@934..938
        TEXT@934..937 "dos"
        NEWLINE@937..938 "\n"
  BLANK_LINE@938..939
    BLANK_LINE@938..939 "\n"
  LIST@939..1147
    LIST_ITEM@939..981
      LIST_MARKER@939..940 "+"
      WHITESPACE@940..941 "\t"
      PLAIN@941..981
        TEXT@941..960 "this is a list item"
        NEWLINE@960..961 "\n"
        TEXT@961..980 "\tindented with tabs"
        NEWLINE@980..981 "\n"
    BLANK_LINE@981..982
      BLANK_LINE@981..982 "\n"
    LIST_ITEM@982..1147
      LIST_MARKER@982..983 "+"
      WHITESPACE@983..986 "   "
      PLAIN@986..1031
        TEXT@986..1005 "this is a list item"
        NEWLINE@1005..1006 "\n"
        TEXT@1006..1030 "    indented with spaces"
        NEWLINE@1030..1031 "\n"
      BLANK_LINE@1031..1032
        BLANK_LINE@1031..1032 "\n"
      LIST@1032..1147
        LIST_ITEM@1032..1085
          WHITESPACE@1032..1033 "\t"
          LIST_MARKER@1033..1034 "+"
          WHITESPACE@1034..1035 "\t"
          PLAIN@1035..1085
            TEXT@1035..1063 "this is an example li ..."
            NEWLINE@1063..1064 "\n"
            TEXT@1064..1084 "\t\tindented with tabs"
            NEWLINE@1084..1085 "\n"
        BLANK_LINE@1085..1087
          BLANK_LINE@1085..1087 "\t\n"
        LIST_ITEM@1087..1147
          WHITESPACE@1087..1088 "\t"
          LIST_MARKER@1088..1089 "+"
          WHITESPACE@1089..1092 "   "
          PLAIN@1092..1147
            TEXT@1092..1120 "this is an example li ..."
            NEWLINE@1120..1121 "\n"
            TEXT@1121..1146 "\t    indented with sp ..."
            NEWLINE@1146..1147 "\n"
