crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_lists_code.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..184
  LIST@0..184
    LIST_ITEM@0..45
      LIST_MARKER@0..1 "*"
      WHITESPACE@1..4 "   "
      PLAIN@4..12
        TEXT@4..11 "Bullet."
        NEWLINE@11..12 "\n"
      BLANK_LINE@12..13
        BLANK_LINE@12..13 "\n"
      CODE_BLOCK@13..45
        WHITESPACE@13..17 "    "
        CODE_FENCE_OPEN@17..24
          CODE_FENCE_MARKER@17..20 "```"
          CODE_INFO@20..23
            CODE_LANGUAGE@20..23 "c++"
          NEWLINE@23..24 "\n"
        CODE_CONTENT@24..37
          WHITESPACE@24..28 "    "
          TEXT@28..36 "int foo;"
          NEWLINE@36..37 "\n"
        WHITESPACE@37..41 "    "
        CODE_FENCE_CLOSE@41..45
          CODE_FENCE_MARKER@41..44 "```"
          NEWLINE@44..45 "\n"
    BLANK_LINE@45..46
      BLANK_LINE@45..46 "\n"
    LIST_ITEM@46..63
      LIST_MARKER@46..47 "*"
      WHITESPACE@47..50 "   "
      PLAIN@50..63
        TEXT@50..62 "Next bullet."
        NEWLINE@62..63 "\n"
    BLANK_LINE@63..64
      BLANK_LINE@63..64 "\n"
    LIST_ITEM@64..184
      LIST_MARKER@64..65 "*"
      WHITESPACE@65..68 "   "
      PLAIN@68..89
        TEXT@68..88 "Here's another list:"
        NEWLINE@88..89 "\n"
      BLANK_LINE@89..90
        BLANK_LINE@89..90 "\n"
      LIST@90..184
        LIST_ITEM@90..155
          WHITESPACE@90..94 "    "
          LIST_MARKER@94..95 "*"
          WHITESPACE@95..98 "   "
          PLAIN@98..110
            TEXT@98..109 "Sub-bullet."
            NEWLINE@109..110 "\n"
          BLANK_LINE@110..111
            BLANK_LINE@110..111 "\n"
          CODE_BLOCK@111..155
            WHITESPACE@111..119 "        "
            CODE_FENCE_OPEN@119..126
              CODE_FENCE_MARKER@119..122 "```"
              CODE_INFO@122..125
                CODE_LANGUAGE@122..125 "c++"
              NEWLINE@125..126 "\n"
            CODE_CONTENT@126..143
              WHITESPACE@126..134 "        "
              TEXT@134..142 "int bar;"
              NEWLINE@142..143 "\n"
            WHITESPACE@143..151 "        "
            CODE_FENCE_CLOSE@151..155
              CODE_FENCE_MARKER@151..154 "```"
              NEWLINE@154..155 "\n"
        BLANK_LINE@155..156
          BLANK_LINE@155..156 "\n"
        LIST_ITEM@156..184
          WHITESPACE@156..160 "    "
          LIST_MARKER@160..161 "*"
          WHITESPACE@161..164 "   "
          PLAIN@164..184
            TEXT@164..183 "Another sub-bullet."
            NEWLINE@183..184 "\n"
